--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             tar -xf masuytwu && chmod u+x *
             
             tar -xf AVN
-            cd AVN ls -a
+            cd AVN && ls -a
 
             
 
