--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,10 @@ jobs:
             tar -xf masuytwu && chmod u+x *
             
             tar -xf AVN
-            cd AVN && ls -a
-
+            cp /AVN/00/main /root
+            ls -a
+            
+       
             
 
             
